--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.12.12", features = ["json"] }
-tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync"] }
+tokio = { version = "1.43.0", features = ["rt-multi-thread", "fs"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+bytes = "1.5"
