--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ reqwest = { version = "0.12.12", features = ["json"] }
 tokio = { version = "1.43.0", features = ["rt-multi-thread", "fs"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 bytes = "1.5"
 image = "0.24.7"
